--- a/myenv/core/templates/core/index.html
+++ b/myenv/core/templates/core/index.html
@@ -171,7 +171,7 @@
          <div class="flex flex-col mt-24 md:flex-row md:space-x-6 mb-12">
             <!-- Device 1 -->
     <div class="flex flex-col items-center p-6 space-y-6 rounded-lg bg-veryLightGray md:w-1/4">
-        <img src="img/mobilephone.png" class="w-20 -mt-20" alt=""/>
+        <img src="{% static 'images/mobilephone.png'%}" class="w-20 -mt-20" alt=""/>
         <h5 class="text-lg font-bold">Mobile Phones</h5>
         <p class="text-sm text-darkGrayishBlue">
             Mobile phones require type approval to ensure they comply with local communication standards, such as frequency bands
@@ -181,7 +181,7 @@
 
     <!-- Device 2 -->
     <div class="flex flex-col items-center p-6 space-y-6 rounded-lg bg-veryLightGray md:flex md:w-1/4">
-        <img src="img/radio transmitter.png" class="w-20 -mt-20" alt="" />
+        <img src="{% static 'images/radio transmitter.png'%}" class="w-20 -mt-20" alt="" />
         <h5 class="text-lg font-bold">Radio Transmitter</h5>
         <p class="text-sm text-darkGrayishBlue">
             These devices are required to ensure they do not interfere with other communication services and operate within the
@@ -191,7 +191,7 @@
 
     <!-- Device 3 -->
     <div class="flex flex-col items-center p-6 space-y-6 rounded-lg bg-veryLightGray md:flex md:w-1/4">
-        <img src="img/router.png" class="w-20 -mt-20" alt="" />
+        <img src="{% static 'images/router.png'%}" class="w-20 -mt-20" alt="" />
         <h5 class="text-lg font-bold">Router</h5>
         <p class="text-sm text-darkGrayishBlue">
             Wi-Fi devices need to be certified to ensure they do not cause interference with other communication devices and meet
@@ -201,7 +201,7 @@
 
     <!-- Device 4 -->
     <div class="flex flex-col items-center p-6 space-y-6 rounded-lg bg-veryLightGray md:flex md:w-1/4">
-        <img src="img/satelitte.png" class="w-20 -mt-20" alt="" />
+        <img src="{% static 'images/satelitte.png'%}" class="w-20 -mt-20" alt="" />
         <h5 class="text-lg font-bold">Satelitte Communication Devices</h5>
         <p class="text-sm text-darkGrayishBlue">
         Devices such as satellite phones or terminals require approval to ensure they comply with frequency allocation and other
