--- a/myenv/core/templates/core/index.html
+++ b/myenv/core/templates/core/index.html
@@ -173,7 +173,7 @@
     <div class="flex flex-col items-center p-6 space-y-6 rounded-lg bg-veryLightGray md:w-1/4">
         <img src="{% static 'images/mobilephone.png'%}" class="w-20 -mt-20" alt=""/>
         <h5 class="text-lg font-bold">Mobile Phones</h5>
-        <p class="text-sm text-darkGrayishBlue">
+        <p class="text-sm font-light text-darkGrayishBlue">
             Mobile phones require type approval to ensure they comply with local communication standards, such as frequency bands
             and safety regulations.
         </p>
@@ -183,7 +183,7 @@
     <div class="flex flex-col items-center p-6 space-y-6 rounded-lg bg-veryLightGray md:flex md:w-1/4">
         <img src="{% static 'images/radio transmitter.png'%}" class="w-20 -mt-20" alt="" />
         <h5 class="text-lg font-bold">Radio Transmitter</h5>
-        <p class="text-sm text-darkGrayishBlue">
+        <p class="text-sm font-light text-darkGrayishBlue">
             These devices are required to ensure they do not interfere with other communication services and operate within the
             prescribed frequencies and power limits.
         </p>
@@ -193,7 +193,7 @@
     <div class="flex flex-col items-center p-6 space-y-6 rounded-lg bg-veryLightGray md:flex md:w-1/4">
         <img src="{% static 'images/router.png'%}" class="w-20 -mt-20" alt="" />
         <h5 class="text-lg font-bold">Router</h5>
-        <p class="text-sm text-darkGrayishBlue">
+        <p class="text-sm font-light text-darkGrayishBlue">
             Wi-Fi devices need to be certified to ensure they do not cause interference with other communication devices and meet
             local wireless communication regulations.
         </p>
@@ -203,7 +203,7 @@
     <div class="flex flex-col items-center p-6 space-y-6 rounded-lg bg-veryLightGray md:flex md:w-1/4">
         <img src="{% static 'images/satelitte.png'%}" class="w-20 -mt-20" alt="" />
         <h5 class="text-lg font-bold">Satelitte Communication Devices</h5>
-        <p class="text-sm text-darkGrayishBlue">
+        <p class="text-sm font-light text-darkGrayishBlue">
         Devices such as satellite phones or terminals require approval to ensure they comply with frequency allocation and other
         national communication rules.
         </p>
