--- a/myenv/core/templates/core/base.html
+++ b/myenv/core/templates/core/base.html
@@ -28,20 +28,29 @@
     
             <!-- MENU ITEMS -->
             <div class="hidden md:flex space-x-6">
-                <a href="#" class="hover:text-darkGrayishBlue">Home</a>
+                <a href="/" class="hover:text-darkGrayishBlue">Home</a>
                 <a href="#" class="hover:text-darkGrayishBlue">About</a>
                 <a href="https://nca.org.gh/" class="hover:text-darkGrayishBlue">Our Website</a>
             </div>
-    
+            
+            <!--user authentication-->
+            {% if request.user.is_authenticated %}
+            <a href="{% url 'accounts:logout'%}"
+                class="hidden md:block p-3 px-6 pt-2 text-white bg-orange-600 rounded-full baseline hover:bg-darkGrayishBlue">LOGOUT
+            </a>
+            
+
+            {% else %}
+
             <!-- BUTTON -->
             <div class="flex space-x-4">
-                <a href="#"
+                <a href="{% url 'accounts:login'%}"
                     class="hidden md:block p-3 px-6 pt-2 text-white bg-orange-600 rounded-full baseline hover:bg-darkGrayishBlue">LOG
                     IN</a>
-                <a href="#"
+                <a href="{% url 'accounts:signup'%}"
                     class="hidden md:block p-3 px-6 pt-2 text-white bg-orange-600 rounded-full baseline  hover:bg-darkGrayishBlue">SIGN
                     UP</a>
-            </div>
+                </div>
     
             <!-- Hamburger Icon -->
             <button id="menu-btn" class="block hamburger md:hidden focus:outline-none">
@@ -49,20 +58,21 @@
                 <span class="hamburger-middle"></span>
                 <span class="hamburger-bottom"></span>
             </button>
-            </div>
-    
+        </div>
+        
         <!-- Mobile Menu -->
         <div class="md:hidden">
             <div id="menu"
-                class="absolute flex-col items-center hidden self-end py-8 mt-10 space-y-6 font-bold bg-white sm:w-auto sm:self-center left-6 right-6 drop-shadow-md">
-                <a href="#">Home</a>
-                <a href="#">About</a>
-                <a href="#">Our Website</a>
-                <a href="#">LOG IN</a>
-                <a href="#">SIGN UP</a>
-            </div>
+            class="absolute flex-col items-center hidden self-end py-8 mt-10 space-y-6 font-bold bg-white sm:w-auto sm:self-center left-6 right-6 drop-shadow-md">
+            <a href="#">Home</a>
+            <a href="#">About</a>
+            <a href="#">Our Website</a>
+            <a href="#">LOG IN</a>
+            <a href="#">SIGN UP</a>
         </div>
+    </div>
     
+        {% endif %}
     </nav>
     
 
