--- a/myenv/core/templates/core/base.html
+++ b/myenv/core/templates/core/base.html
@@ -35,7 +35,7 @@
             
             <!--user authentication-->
             {% if request.user.is_authenticated %}
-            <a href="{% url 'accounts:logout'%}"
+            <a href="{% url 'accounts:login'%}"
                 class="hidden md:block p-3 px-6 pt-2 text-white bg-orange-600 rounded-full baseline hover:bg-darkGrayishBlue">LOGOUT
             </a>
             
