--- a/myenv/user_ui/templates/user_ui/type_approval.html
+++ b/myenv/user_ui/templates/user_ui/type_approval.html
@@ -5,6 +5,33 @@
 
 <h1 class="text-3xl text-center">type approval page</h1>
 
+<form action="." method='post'>
+
+    {% csrf_token %}
+
+    {{ form.as_p}}
+
+    <button type="submit">submit</button><br>
+
+    {% if form.errors %}
+    <div class="error">
+        <p>Please correct the following errors:</p>
+        <ul>
+            {% for field in form %}
+                {% for error in field.errors %}
+                    <li>{{ error }}</li>
+                {% endfor %}
+            {% endfor %}
+            {% for error in form.non_field_errors %}
+                <li>{{ error }}</li>
+            {% endfor %}
+        </ul>
+    </div>
+{% endif %}
+
+
+</form>
+
 {% endblock content %}
 
 
