--- a/core/templates/core/base.html
+++ b/core/templates/core/base.html
@@ -13,6 +13,7 @@
         <link rel="shortcut icon" sizes="128x128" href="{% static 'images/ncafavicon.ico'}" type="image/x-icon">
         <link rel="stylesheet" type="text/css" href="{% static 'static/css/main.css'%}">
         <title>RA PORTAL</title>
+        <script src="https://cdn.tailwindcss.com"></script>
     </head>
 
 <body>
@@ -29,7 +30,7 @@
             <!-- MENU ITEMS -->
             <div class="hidden md:flex space-x-6">
                 <a href="/" class="hover:text-darkGrayishBlue">Home</a>
-                <a href="{% url 'core:about'%}"" class="hover:text-darkGrayishBlue">About</a>
+                <a href="{% url 'core:about'%}" class="hover:text-darkGrayishBlue">About</a>
                 <a href="{% url 'core:contact'%}" class="hover:text-brightRed">Contact Us</a>
                 <a href="https://nca.org.gh/" class="hover:text-darkGrayishBlue">Our Website</a>
             </div>
