--- a/user_ui/templates/user_ui/type_approval.html
+++ b/user_ui/templates/user_ui/type_approval.html
@@ -1,17 +1,9 @@
 {% extends "core/base.html" %}
-
+{% load static %}
 
 {% block content %}
 
-<!DOCTYPE html>
-<html lang="en">
 
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Product Registration Form</title>
-    <script src="https://cdn.tailwindcss.com"></script>
-</head>
 
 <body class="bg-gray-100">
     <!-- Full-Width Header -->
@@ -176,7 +168,6 @@
 
 </body>
 
-</html>
 
 {% endblock content %}
 
