--- a/admin_ui/templates/admin_ui/admin_base.html
+++ b/admin_ui/templates/admin_ui/admin_base.html
@@ -31,8 +31,8 @@
             <!-- MENU ITEMS -->
             <div class="hidden md:flex items-center space-x-6">
                 <a href="/" class="hover:text-darkGrayishBlue hover:text-blue-500 hover:underline">Home</a>
-                <a href="{% url 'core:about'%}" class="hover:text-darkGrayishBlue hover:text-blue-500 hover:underline">About</a>
-                <a href="{% url 'core:contact'%}" class="hover:text-brightRed hover:text-blue-500 hover:underline">Contact Us</a>
+                <a href="#" class="hover:text-darkGrayishBlue hover:text-blue-500 hover:underline">Dashboard</a>
+                <a href="{% url 'core:contact'%}" class="hover:text-brightRed hover:text-blue-500 hover:underline">Type Approval Request</a>
                 <a href="https://nca.org.gh/" class="hover:text-darkGrayishBlue hover:text-blue-500 hover:underline">Our Website</a>
                 <!--my approval dropdown menu-->
                
@@ -72,7 +72,7 @@
                             type="button"
                             class="relative flex items-center whitespace-nowrap justify-center gap-2 py-2 rounded-lg  bg-white hover:bg-gray-50 text-gray-800  hover:text-blue-500 hover:underline px-4"
                         >
-                            <span class="font-normal">My Approvals</span>
+                            <span class="font-normal">Dealership Request</span>
 
                             <!-- Heroicon: micro chevron-down -->
                             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16" fill="currentColor" class="size-4">
