--- a/core/templates/core/base.html
+++ b/core/templates/core/base.html
@@ -17,7 +17,7 @@
         <script defer src="https://cdn.jsdelivr.net/npm/alpinejs@3.x.x/dist/cdn.min.js"></script>
     </head>
 
-<body class='px-6'>
+<body>
     
     <nav class="relative container mx-auto p-6">
         <!--FLEX CONTAINER -->
