--- a/admin_ui/templates/admin_ui/admin_ui.html
+++ b/admin_ui/templates/admin_ui/admin_ui.html
@@ -3,7 +3,25 @@
 
 {% block content %}
 
-<h2>admin user interface or dashboard</h2>
+<h2 class="font-semibold text-2xl text-gray-600">Dashboard</h2>
+
+<div>
+    <div class='lg:grid lg:grid-cols-3 lg:gap-4 space-y-4 px-4 lg:px-1'>
+        <div class='w-80 h-40 rounded-md bg-gray-200'>
+            <h1>hello</h1>
+
+        </div>
+        <div class='w-80 h-40 rounded-md bg-gray-200'>
+            <h1>hello</h1>
+
+        </div>
+        <div class='w-80 h-40 rounded-md bg-gray-200'>
+            <h1>hello</h1>
+
+        </div>
+
+    </div>
+</div>
 
 {% endblock content %}
 
